# swagger.json
@@ -674,6 +674,147 @@
         }
       }
     },
+    "/api/admin/category": {
+      "post": {
+        "tags": [
+          "Admin - Categories"
+        ],
+        "summary": "Create category",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "required": [
+                "en_lang",
+                "hy_lang",
+                "ru_lang",
+                "image"
+              ],
+              "properties": {
+                "en_lang": {
+                  "type": "string"
+                },
+                "hy_lang": {
+                  "type": "string"
+                },
+                "ru_lang": {
+                  "type": "string"
+                },
+                "image": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "422": {
+            "description": "Fail"
+          }
+        }
+      }
+    },
+    "/api/admin/category/update/{id}": {
+      "put": {
+        "tags": [
+          "Admin - Categories"
+        ],
+        "summary": "Update category",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "required": [
+                "en_lang",
+                "hy_lang",
+                "ru_lang",
+                "image"
+              ],
+              "properties": {
+                "en_lang": {
+                  "type": "string"
+                },
+                "hy_lang": {
+                  "type": "string"
+                },
+                "ru_lang": {
+                  "type": "string"
+                },
+                "image": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "422": {
+            "description": "Fail"
+          }
+        }
+      }
+    },
+    "/api/admin/category/delete/{id}": {
+      "delete": {
+        "tags": [
+          "Admin - Categories"
+        ],
+        "summary": "Delete category",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "422": {
+            "description": "Fail"
+          }
+        }
+      }
+    },
     "/api/admin/sub-categories": {
       "get": {
         "tags": [
@@ -740,12 +881,12 @@
         }
       }
     },
-    "/api/admin/category": {
+    "/api/admin/sub-category": {
       "post": {
         "tags": [
           "Admin - Categories"
         ],
-        "summary": "Create category",
+        "summary": "Create sub category",
         "parameters": [
           {
             "name": "Authorization",
@@ -762,7 +903,8 @@
                 "en_lang",
                 "hy_lang",
                 "ru_lang",
-                "image"
+                "image",
+                "category_id"
               ],
               "properties": {
                 "en_lang": {
@@ -777,6 +919,9 @@
                 "image": {
                   "type": "string",
                   "format": "binary"
+                },
+                "category_id": {
+                  "type": "string"
                 }
               }
             }
@@ -792,12 +937,12 @@
         }
       }
     },
-    "/api/admin/category/{id} ": {
+    "/api/admin/sub-category/update/{id}": {
       "put": {
         "tags": [
           "Admin - Categories"
         ],
-        "summary": "Update category",
+        "summary": "Update sub category",
         "parameters": [
           {
             "name": "Authorization",
@@ -838,6 +983,37 @@
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "422": {
+            "description": "Fail"
+          }
+        }
+      }
+    },
+    "/api/admin/sub-category/delete/{id}": {
+      "delete": {
+        "tags": [
+          "Admin - Categories"
+        ],
+        "summary": "Delete sub category",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "number"
           }
         ],
         "responses": {
